updated publications tab to search for papers in .bib file

--- a/books.html
+++ b/books.html
@@ -24,28 +24,44 @@
 
 <main class="content narrow">
   <h2>My Reading List</h2>
-  <p class="section-intro">Influential books and papers (categorize as needed).</p>
+  <p class="section-intro">
+    Below is a collection of the books, papers, and podcasts that have had a significant influence on me over the past 10 years. I include them to give anyone interested both some inspiration and some insight into the foundations for my thinking and scientific reasoning.
+  </p>
 
   <section class="list-grid">
     <div class="card">
-      <h3>Cognitive Science</h3>
+      <h3>Best Books I've Read</h3>
       <ul>
-        <li>Book / Paper 1</li>
-        <li>Book / Paper 2</li>
+        <li>🔖 David Mackay — <em>Learning Theory: Inference and Algorithms</em> (2003)</li>
+        <li>🔖 Matthew Ball — <em>The Metaverse</em> (2022)</li>
+        <li>🔖 Stephen Jay Gould — <em>Ontogeny and Phylogeny</em> (1977)</li>
+        <li>🔖 Ole Andkjær & Simo Køppe — <em>Freud's Psychoanalysis</em> (1978)</li>
+        <li>🔖 Marcel Proust — <em>In Search of Lost Time</em> (1913–1927) <small>(Can't claim to have read it all!)</small></li>
+        <li>🔖 Brian Hare — <em>Survival of the Friendliest</em> (2020)</li>
+        <li>🔖 Eckhart Tolle — <em>The Power of Now</em> (1997)</li>
+        <li>🔖 Thomas Parr, Giovanni Pezzulo, Karl Friston — <em>Active Inference: The Free Energy Principle in Mind, Brain, and Behavior</em> (2023)</li>
+        <li>🔖 Hartmut Rosa — <em>The Uncontrollability of the World</em> (2020)</li>
+        <li>🔖 Neville Symington — <em>The Making of a Psychotherapist</em> (1996)</li>
       </ul>
     </div>
     <div class="card">
-      <h3>AI & ML</h3>
+      <h3>Best Articles</h3>
       <ul>
-        <li>Book / Paper A</li>
-        <li>Book / Paper B</li>
+        <li>✍️ Kleinberg, Jon, et al. "The inversion problem: Why algorithms should infer mental state and not just predict behavior." <em>Perspectives on Psychological Science</em> 19.5 (2024): 827-838.</li>
+        <li>✍️ Kleinberg, Jon, Sendhil Mullainathan, and Manish Raghavan. "The challenge of understanding what users want: Inconsistent preferences and engagement optimization." <em>Management Science</em> 70.9 (2024): 6336-6355.</li>
+        <li>✍️ Miller, Kevin, et al. "Cognitive model discovery via disentangled RNNs." <em>Advances in Neural Information Processing Systems</em> 36 (2023): 61377-61394.</li>
+        <li>✍️ Hassabis, Demis, et al. "Neuroscience-inspired artificial intelligence." <em>Neuron</em> 95.2 (2017): 245-258.</li>
+        <li>✍️ Brinkmann, Svend. "Problems of diagnostic psychiatry—and the search for a way forward." <em>Nordic Psychology</em> 76.4 (2024): 446-461.</li>
+        <li>✍️ Chatziagapi, Aggelina, et al. "AV-Flow: Transforming Text to Audio-Visual Human-like Interactions." <em>arXiv preprint arXiv:2502.13133</em> (2025).</li>
+        <li>✍️ Barrett, Lisa Feldman, et al. "Emotional expressions reconsidered: Challenges to inferring emotion from human facial movements." <em>Psychological Science in the Public Interest</em> 20.1 (2019): 1-68.</li>
+        <li>✍️ Thuesen, Mette. "Terapeutens behov for at hele." <em>Matrix</em> 32.1 (2015): 4-26.</li>
+        <li>✍️ Metzger, Sean L., et al. "A high-performance neuroprosthesis for speech decoding and avatar control." <em>Nature</em> 620.7976 (2023): 1037-1046.</li>
       </ul>
     </div>
     <div class="card">
-      <h3>Mental Health</h3>
+      <h3>Podcasts</h3>
       <ul>
-        <li>Title X</li>
-        <li>Title Y</li>
+        <li>🎧 The Double-Edged Sword of AI, with Dr. Ziad Obermeyer, NEJM AI Grand Rounds (2023) Spotify</li>
       </ul>
     </div>
   </section>
