--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header class="site-header">
   <div class="brand">
     <h1 class="site-title">Martin Lund Trinhammer</h1>
-    <p class="tagline">Psychology × AI · Mental Health Research</p>
+    <p class="tagline">Psychology | AI | Mental Health Research</p>
   </div>
   <nav class="main-nav" aria-label="Main">
     <ul>
@@ -25,7 +25,10 @@
 <main class="content">
   <section class="profile">
     <div class="avatar-wrapper">
-      <img src="images/headshot.jpg" alt="Headshot of Martin Lund Trinhammer" class="avatar">
+      <img src="images/headshot.jpg"
+           srcset="images/headshot.jpg 1x, images/headshot@2x.jpg 2x"
+           alt="Headshot of Martin Lund Trinhammer"
+           class="avatar">
     </div>
     <div class="intro-text">
       <p class="lead">Thank you for visiting my research profile.</p>
