--- a/publications.html
+++ b/publications.html
@@ -24,20 +24,9 @@
 
 <main class="content narrow">
   <h2>Publications</h2>
-  <p class="section-intro">Selected work. (Provide your real list or BibTeX rendering here.)</p>
+  <p class="section-intro">Below is a selection of my recent research publications in psychology, machine learning, and mental health.</p>
 
   <section class="pub-list">
-    <!-- Example item -->
-    <article class="pub">
-      <h3 class="pub-title">Title of Paper</h3>
-      <p class="pub-meta">Author A, Author B, M. L. Trinhammer (2024)</p>
-      <p class="pub-venue">Journal / Conference</p>
-      <p class="pub-links">
-        <a href="#" class="small-link">PDF</a>
-        <a href="#" class="small-link">DOI</a>
-        <a href="#" class="small-link">Code</a>
-      </p>
-    </article>
     <!-- Repeat -->
   </section>
 </main>
