updated to horizontal rendering of tabs in reading list

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header class="site-header">
   <div class="brand">
     <h1 class="site-title">Martin Lund Trinhammer</h1>
-    <p class="tagline">Psychology | AI | Mental Health Research</p>
+    <p class="tagline">Psychology | Machine-Learning | Mental Health</p>
   </div>
   <nav class="main-nav" aria-label="Main">
     <ul>
