--- a/publications.html
+++ b/publications.html
@@ -10,7 +10,7 @@
 <header class="site-header">
   <div class="brand">
     <h1 class="site-title">Martin Lund Trinhammer</h1>
-    <p class="tagline">Psychology × AI · Mental Health Research</p>
+    <p class="tagline">Psychology | Machine-Learning | Mental Health</p>
   </div>
   <nav class="main-nav" aria-label="Main">
     <ul>
@@ -27,7 +27,26 @@
   <p class="section-intro">Below is a selection of my recent research publications in psychology, machine learning, and mental health.</p>
 
   <section class="pub-list">
-    <!-- Repeat -->
+    <article class="pub">
+      <h3 class="pub-title">Evaluating Open-Source Solutions for Computerized Inference of Infant Facial Affect</h3>
+      <p class="pub-meta">Trinhammer, ML; Krogh, MT; Stuart, AC; Vaeve, MS; Brandt, SB; Grasshof, S (2025)</p>
+      <p class="pub-venue">Developmental Science. <strong>In press</strong>.</p>
+    </article>
+    <article class="pub">
+      <h3 class="pub-title">Just a brow or biomarker? Investigating facial micro movements in patients with bipolar disorder using computational methods</h3>
+      <p class="pub-meta">Trinhammer, ML; Grasshof, S; Kessing, LV; Kjaerstad, HL; Miskowiak, KW; Brandt, SB (2025)</p>
+      <p class="pub-venue">Neuroscience Applied. <strong>In press</strong>.</p>
+    </article>
+    <article class="pub">
+      <h3 class="pub-title">The Language of Attachment: Modeling Attachment Dynamics in Psychotherapy</h3>
+      <p class="pub-meta">Bredgaard, Frederik; Trinhammer, Martin Lund; Bassignana, Elisa (2025)</p>
+      <p class="pub-venue">arXiv preprint arXiv:2504.16271.</p>
+    </article>
+    <article class="pub">
+      <h3 class="pub-title">Predicting crime during or after psychiatric care: Evaluating machine learning for risk assessment using the Danish patient registries</h3>
+      <p class="pub-meta">Trinhammer, ML; Merrild, AC Holst; Lotz, Jonas Fæ rch; Makransky, Guido (2022)</p>
+      <p class="pub-venue">Journal of Psychiatric Research, 152:194–200. Elsevier.</p>
+    </article>
   </section>
 </main>
 
