--- a/books.html
+++ b/books.html
@@ -10,7 +10,7 @@
 <header class="site-header">
   <div class="brand">
     <h1 class="site-title">Martin Lund Trinhammer</h1>
-    <p class="tagline">Psychology × AI · Mental Health Research</p>
+    <p class="tagline">Psychology | Machine-Learning | Mental Health</p>
   </div>
   <nav class="main-nav" aria-label="Main">
     <ul>
@@ -28,7 +28,7 @@
     Below is a collection of the books, papers, and podcasts that have had a significant influence on me over the past 10 years. I include them to give anyone interested both some inspiration and some insight into the foundations for my thinking and scientific reasoning.
   </p>
 
-  <section class="list-grid">
+  <section class="list-grid horizontal">
     <div class="card">
       <h3>Best Books I've Read</h3>
       <ul>
