--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="intro-text">
       <p class="lead">Thank you for visiting my research profile.</p>
       <p>I am a psychologist-turned-computer scientist, currently pursuing a PhD at the IT University of Copenhagen and the <a href="https://www.aicentre.dk/" target="_blank" rel="noopener">Pioneer Centre for Artificial Intelligence</a>.</p>
-      <p>I work at the intersection of psychology and AI in the mental health domain.</p>
+      <p>My passion is in the intersection of data-driven learning and psychology, especially with regards to the mental health domain. My PhD is centered around multi-modal machine learning for diagnostics and treatment. </p>
       <p>See my <a href="CV.pdf" target="_blank" rel="noopener">CV</a> for more details, browse projects under Publications, and explore the Reading List for influential works.</p>
       <p>Contact: <a href="mailto:mlut@itu.dk">mlut@itu.dk</a></p>
       <div class="links-row">
