--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       <img src="images/headshot.jpg"
            srcset="images/headshot.jpg 1x, images/headshot@2x.jpg 2x"
            alt="Headshot of Martin Lund Trinhammer"
-           class="avatar">
+           class="avatar"
+           width="240" height="240" loading="eager" decoding="async" onerror="this.style.display='none';document.getElementById('avatar-fallback').style.display='flex';">
+      <div id="avatar-fallback" style="display:none;align-items:center;justify-content:center;width:100%;height:100%;font-size:.7rem;color:#555;background:#d9dce0;">Image unavailable</div>
     </div>
     <div class="intro-text">
       <p class="lead">Thank you for visiting my research profile.</p>
