--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <p class="lead">Thank you for visiting my research profile.</p>
       <p>I am a psychologist-turned-computer scientist, currently pursuing a PhD at the IT University of Copenhagen and the <a href="https://www.aicentre.dk/" target="_blank" rel="noopener">Pioneer Centre for Artificial Intelligence</a>.</p>
       <p>My passion is in the intersection of data-driven learning and psychology, especially with regards to the mental health domain. My PhD is centered around multi-modal machine learning for diagnostics and treatment. </p>
-      <p>My present project concerns non-verbal synchrony analysis during psychotherapy, attempting to model this openTSLM. </p>
+      <p>My present project concerns non-verbal synchrony analysis during psychotherapy, attempting to model this usingopenTSLM. </p>
       <p>See my <a href="CV.pdf" target="_blank" rel="noopener">CV</a> for more details, browse projects under Publications, and explore the Reading List for influential works.</p>
       <p>Contact: <a href="mailto:mlut@itu.dk">mlut@itu.dk</a></p>
       <div class="links-row">
         <a class="button" href="publications.html">Publications</a>
-        <a class="button ghost" href="CV.pdf" target="_blank" rel="noopener">CV (PDF)</a>
+        <a class="button ghost" href="CV October 2025.pdf" target="_blank" rel="noopener">CV (PDF)</a>
         <a class="icon-link" href="https://github.com/mlt94" target="_blank" rel="noopener">
           <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="" width="20" height="20">
           GitHub
