--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,7 @@
   <section class="pub-list">
     <article class="pub">
       <h3 class="pub-title">Evaluating Open-Source Solutions for Computerized Inference of Infant Facial Affect</h3>
-      <p class="pub-meta">Trinhammer, ML; Krogh, MT; Stuart, AC; Vaeve, MS; Brandt, SB; Grasshof, S (2025)</p>
+      <p class="pub-meta">Trinhammer, ML; Krogh, MT; Stuart, AC; Vaever, MS; Brandt, SB; Grasshof, S (2025)</p>
       <p class="pub-venue">Developmental Science. <strong>In press</strong>.</p>
       <details class="pub-abstract">
         <summary>Show abstract</summary>
@@ -37,7 +37,7 @@
       </details>
     </article>
     <article class="pub">
-      <h3 class="pub-title">Just a brow or biomarker? Investigating facial micro movements in patients with bipolar disorder using computational methods</h3>
+      <h3 class="pub-title">Don't Predict If You Cannot Interpret: Investigating the Clinical Viability of Facial Movements for Machine-Learning Assisted Diagnostics of Bipolar Disorder</h3>
       <p class="pub-meta">Trinhammer, ML; Grasshof, S; Kessing, LV; Kjaerstad, HL; Miskowiak, KW; Brandt, SB (2025)</p>
       <p class="pub-venue">Neuroscience Applied. <strong>In press</strong>.</p>
       <details class="pub-abstract">
